end task of 2 lesson in 5 module

--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -1,7 +1,7 @@
 {{#with footer}}
 	<footer>
-		<hr class="my-5" />
-		<div>
+		<hr class="mb-2" />
+		<div class="mt-3">
 			{{#with social}}
 			{{> link text=email.text href=email.href blank=true}}
 			{{> link text=phone.text href=phone.href}}
