--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,18 +1,115 @@
-{{! 
-Це код container файлу для index сторінки, 
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- }}
+<h4 class='mt-5 mb-3 text-center'>Список сторінок</h4>
 
-<div class='p-5'>
-  <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+<p class='mb-5 text-center'>Це мій перший пет-проєкт, тут можна дізнатися про всяку інформацію і т.д.</p>
 
-  <button
-    type='button'
-    class='btn btn-secondary'
-  >Купити</button>
+<div class='row justify-content-center'>
+    <div class='col-2 ps-0'>
+        <a href='/summary' class='col-12 mb-4 btn btn-warning'>Summary</a>
+    </div>
+
+    <div class='col-2 ps-0'>
+        <a href='/skills' class='col-12 mb-4 btn btn-success'>Skills</a>
+    </div>
+
+    <div class='col-2 ps-0'>
+        <a href='/education' class='col-12 mb-4 btn btn-primary'>Education</a>
+    </div>
+
+    <div class='col-2 ps-0 pe-0'>
+        <a href='/work' class='col-12 mb-4 btn btn-info'>Work</a>
+    </div>
 </div>
 
-{{! 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
-}}
+<div class='row justify-content-around'>
+    <div class='col-2'>
+        <a href='/person' class='col-12 mb-4 btn btn-outline-danger'>Person</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/bio' class='col-12 mb-4 btn btn-outline-info'>Bio</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/program' class='col-12 mb-4 btn btn-outline-secondary'>Program</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/web' class='col-12 mb-4 btn btn-outline-success'>Web</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/facebook' class='col-12 mb-4 btn btn-outline-primary'>Facebook</a>
+    </div>
+</div>
+
+<div class='row justify-content-center'>
+    <div class='col-2'>
+        <a href='/mac' class='col-12 mb-4 btn btn-primary'>Mac</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/car' class='col-12 mb-4 btn btn-danger'>Car</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/js' class='col-12 mb-4 btn btn-warning'>JS</a>
+    </div>
+</div>
+
+<div class='row justify-content-center'>
+    <div class='col-2 ps-0'>
+        <a href='/task21' class='col-12 mb-4 btn btn-primary'>Task21</a>
+    </div>
+
+    <div class='col-2 ps-0'>
+        <a href='/task22' class='col-12 mb-4 btn btn-secondary'>Task22</a>
+    </div>
+
+    <div class='col-2 ps-0'>
+        <a href='/task31' class='col-12 mb-4 btn btn-success'>Task31</a>
+    </div>
+
+    <div class='col-2 ps-0 pe-0'>
+        <a href='/shophome' class='col-12 mb-4 btn btn-info'>Shophome</a>
+    </div>
+</div>
+
+<div class='row justify-content-around'>
+    <div class='col-2'>
+        <a href='/shoporder' class='col-12 mb-4 btn btn-outline-success'>Shoporder</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/shopcart' class='col-12 mb-4 btn btn-outline-info'>Shopcart</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/shopprofile' class='col-12 mb-4 btn btn-outline-primary'>Shopprofile</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/shopreview' class='col-12 mb-4 btn btn-outline-warning'>Shopreview</a>
+    </div>
+
+    <div class='col-2'>
+        <a href='/shopcatalog' class='col-12 mb-4 btn btn-outline-danger'>Shopcatalog</a>
+    </div>
+</div>
+
+<div class='row justify-content-center'>
+    <div class='col-2 ps-0'>
+        <a href='/bootstrap' class='col-12 btn btn-danger'>Bootstrap</a>
+    </div>
+
+    <div class='col-2 ps-0'>
+        <a href='/bootstrap3' class='col-12 btn btn-primary'>Bootstrap3</a>
+    </div>
+
+    <div class='col-2 ps-0'>
+        <a href='/bootstrap4' class='col-12 btn btn-success'>Bootstrap4</a>
+    </div>
+
+    <div class='col-2 ps-0 pe-0'>
+        <a href='/bootstrap6' class='col-12 btn btn-warning'>Bootstrap6</a>
+    </div>
+</div>
