--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -6,7 +6,7 @@
 <div>
 	{{#with main}}
 		<main>
-			<section>
+			<section class="mb-4">
 				{{> title data="All skills" big=true}}
 				<ul>
 					{{#each skills}}
@@ -28,7 +28,7 @@
 				</ul>
 			</section>
 
-			<section>
+			<section class="mb-5">
 				{{> title data="My Hobbies" big=false}}
 				<ul>
 					{{#each hobbies}} 
