--- a/src/layout/index.hbs
+++ b/src/layout/index.hbs
@@ -7,7 +7,7 @@
 
     <head>
         <title>
-            Basic page
+            Головна сторінка
         </title>
         <meta charset='utf-8' />
         <link href='css/index.css' rel='stylesheet' />
@@ -18,14 +18,32 @@
             integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD'
             crossorigin='anonymous'
         />
+
+        <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css' />
     </head>
 
-    <body>
+    <body class='p-5'>
+        <section class='col-12'>
+            <div class='card'>
+                <div class='card-body'>
+                    <div class='row'>
+                        <div class='col-6'>
+                            <h6 class='mb-0 text-start'>Ім'я Прізвище</h6>
+                        </div>
+                        <div class='col-6'>
+                            <h6 class='mb-0 text-end'>Resume Project</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         {{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу }}
         {{{body}}}
 
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
+
+        <script src='https://kit.fontawesome.com/f6c0f1b4f7.js' crossorigin='anonymous'></script>
     </body>
 
 </html>
